Add blocklist for roots and fix breaking TWR compat