@@ -15,6 +15,7 @@ import com.aetherianartificer.townstead.compat.ModCompat;
 import com.aetherianartificer.townstead.compat.thirst.ThirstBridgeResolver;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.ArrayList;
 import java.util.HashSet;
@@ -96,6 +97,10 @@ public final class TownsteadConfig {
     public static final ModConfigSpec.ConfigValue<Double> FATIGUE_NOCTURNAL_MULTIPLIER;
     public static final ModConfigSpec.ConfigValue<Double> FATIGUE_MISALIGNED_MULTIPLIER;
     public static final ModConfigSpec.BooleanValue DEBUG_VILLAGER_SLEEP;
+    public static final ModConfigSpec.ConfigValue<List<? extends String>> BLOCKED_ROOTS;
+    public static final ModConfigSpec.ConfigValue<List<? extends String>> BLOCKED_SPECIES;
+    public static final ModConfigSpec.ConfigValue<List<? extends String>> BLOCKED_ANCESTRIES;
+    public static final ModConfigSpec.ConfigValue<List<? extends String>> BLOCKED_LINEAGES;
     public static final ModConfigSpec.ConfigValue<String> CALENDAR_PROFILE;
     public static final ModConfigSpec.BooleanValue CALENDAR_REAL_CLOCK;
     public static final ModConfigSpec.DoubleValue AGING_SCALE;
@@ -173,6 +178,10 @@ public final class TownsteadConfig {
     public static final ForgeConfigSpec.ConfigValue<Double> FATIGUE_NOCTURNAL_MULTIPLIER;
     public static final ForgeConfigSpec.ConfigValue<Double> FATIGUE_MISALIGNED_MULTIPLIER;
     public static final ForgeConfigSpec.BooleanValue DEBUG_VILLAGER_SLEEP;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends String>> BLOCKED_ROOTS;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends String>> BLOCKED_SPECIES;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends String>> BLOCKED_ANCESTRIES;
+    public static final ForgeConfigSpec.ConfigValue<List<? extends String>> BLOCKED_LINEAGES;
     public static final ForgeConfigSpec.ConfigValue<String> CALENDAR_PROFILE;
     public static final ForgeConfigSpec.BooleanValue CALENDAR_REAL_CLOCK;
     public static final ForgeConfigSpec.DoubleValue AGING_SCALE;
@@ -260,7 +269,8 @@ public final class TownsteadConfig {
                     .comment("Which thirst mod drives villager thirst when more than one is installed.",
                              "\"auto\" prefers Legendary Survival Overhaul, then Thirst Was Reclaimed / Thirst Was Taken.",
                              "\"legendary_survival_overhaul\" or \"thirst\" pins that backend, falling back to the other if it is not installed.")
-                    .defineInList("preferredBackend", "auto", List.of("auto", "legendary_survival_overhaul", "thirst"));
+                    // Arrays.asList, not List.of: correct() probes missing keys with null and List.of.contains(null) throws.
+                    .defineInList("preferredBackend", "auto", Arrays.asList("auto", "legendary_survival_overhaul", "thirst"));
             b.pop();
         } else {
             ENABLE_SELF_INVENTORY_DRINKING = null;
@@ -491,6 +501,28 @@ public final class TownsteadConfig {
             ENABLE_TOWNSTEAD_COOK = null;
         }
 
+        // ── Roots ──
+        b.translation("townstead.configuration.roots").push("roots");
+        BLOCKED_ROOTS = b
+                .translation("townstead.configuration.roots.blockedRoots")
+                .comment("Root ids to disable on this server (e.g. townstead_roots:moon_elf; entries without a namespace assume townstead_roots).",
+                         "Blocked roots are hidden from the picker and never rolled for naturally spawned villagers.",
+                         "Not retroactive: villagers and players that already have a blocked root keep it.")
+                .defineListAllowEmpty("blockedRoots", List.of(), TownsteadConfig::isValidResourceLocationString);
+        BLOCKED_SPECIES = b
+                .translation("townstead.configuration.roots.blockedSpecies")
+                .comment("Species ids to disable. Blocks every root that resolves to a listed species.")
+                .defineListAllowEmpty("blockedSpecies", List.of(), TownsteadConfig::isValidResourceLocationString);
+        BLOCKED_ANCESTRIES = b
+                .translation("townstead.configuration.roots.blockedAncestries")
+                .comment("Ancestry ids to disable. Blocks every root whose ancestry (declared directly or through its lineage) is listed.")
+                .defineListAllowEmpty("blockedAncestries", List.of(), TownsteadConfig::isValidResourceLocationString);
+        BLOCKED_LINEAGES = b
+                .translation("townstead.configuration.roots.blockedLineages")
+                .comment("Lineage ids to disable. Blocks every root that selects a listed lineage.")
+                .defineListAllowEmpty("blockedLineages", List.of(), TownsteadConfig::isValidResourceLocationString);
+        b.pop();
+
         // ── Calendar ──
         b.translation("townstead.configuration.calendar").push("calendar");
         CALENDAR_PROFILE = b
@@ -694,6 +726,42 @@ public final class TownsteadConfig {
 
     public static boolean isVillagerSleepDebugEnabled() {
         return DEBUG_VILLAGER_SLEEP.get();
+    }
+
+    /** Never throws: empty before the server config is loaded. */
+    public static List<? extends String> blockedRootIds() {
+        try {
+            return BLOCKED_ROOTS.get();
+        } catch (IllegalStateException | NullPointerException e) {
+            return List.of();
+        }
+    }
+
+    /** Never throws: empty before the server config is loaded. */
+    public static List<? extends String> blockedSpeciesIds() {
+        try {
+            return BLOCKED_SPECIES.get();
+        } catch (IllegalStateException | NullPointerException e) {
+            return List.of();
+        }
+    }
+
+    /** Never throws: empty before the server config is loaded. */
+    public static List<? extends String> blockedAncestryIds() {
+        try {
+            return BLOCKED_ANCESTRIES.get();
+        } catch (IllegalStateException | NullPointerException e) {
+            return List.of();
+        }
+    }
+
+    /** Never throws: empty before the server config is loaded. */
+    public static List<? extends String> blockedLineageIds() {
+        try {
+            return BLOCKED_LINEAGES.get();
+        } catch (IllegalStateException | NullPointerException e) {
+            return List.of();
+        }
     }
 
     public static String getCalendarProfile() {
